<?xml version='1.0' encoding='utf-8' ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/modal_bg"
    android:paddingLeft="2.0dip"
    android:paddingTop="3.0dip"
    android:paddingRight="2.0dip"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<TextView
	   android:id="@+id/popup_message"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:layout_centerHorizontal="true"
	   android:layout_centerInParent="true"
	   android:textAppearance="@android:style/TextAppearance.Large"
	   android:textColor="@color/Purple_700"
	   android:text="@string/title_activity_main"/>

	<RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/popup_message"
       android:layout_centerInParent="true" >
	    <Button
	       android:ellipsize="end"
	       android:id="@+id/cancel_btn"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/cancel"
	       android:background="@drawable/modal_bg"/>
	    <Button
	       android:id="@+id/ok_btn"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignBottom="@+id/cancel_btn"
	       android:layout_toRightOf="@+id/cancel_btn"
	       android:onClick="onSnoozeClick"
	       android:text="@string/ok"
	       android:background="@drawable/modal_bg"/>
    </RelativeLayout>
</RelativeLayout>