<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:actionBarSize"
        android:background="#f43"
        tools:ignore="NewApi">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <TextView
                android:id="@+id/NewMessages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_direct_message"/>
        </RelativeLayout>

    </Toolbar>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/inbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inbox" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/NoNewMessages"
                android:text="@string/no_new_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText"/>
        </TableRow>
    </TableLayout>

    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/send_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="mini"
        android:id="@+id/floatingNewDM"/>


</LinearLayout>