<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<include layout="@layout/toolbar_default_mid_no_tools"/>

	<RelativeLayout
		android:id="@id/outerWindow"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<ImageView
			android:id="@id/outer_bg"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:scaleType="centerCrop"/>
		<RelativeLayout
			android:id="@id/innerWindow"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"/>
		<ImageView
			android:id="@id/chick_chat_icon"
			android:layout_width="100.0dip"
			android:layout_height="100.0dip"
			android:scaleType="centerInside"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:src="@drawable/icon"/>
		<TextView
			android:textAppearance="?android:textAppearanceMedium"
			android:textSize="10.0sp"
			android:id="@+id/developed_by"
			android:visibility="visible"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/developed_by_text"
			android:layout_above="@id/thanks_support"
			android:layout_centerHorizontal="true"/>
		<TextView
			android:textAppearance="?android:textAppearanceLarge"
			android:textSize="20.0sp"
			android:textStyle="bold"
			android:id="@id/chick_chat_app"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16.0dip"
			android:text="@string/app_name"
			android:layout_above="@id/project_fantastix"
			android:layout_centerHorizontal="true"/>
		<TextView
			android:textAppearance="?android:textAppearanceMedium"
			android:textSize="14.0sp"
			android:id="@id/version_number"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16.0dip"
			android:text="@string/version_no"
			android:layout_below="@id/chick_chat_icon"
			android:layout_centerHorizontal="true"/>
		<TextView
			android:textAppearance="?android:textAppearanceMedium"
			android:textSize="14.0sp"
			android:id="@id/project_fantastix"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16.0dip"
			android:text="\#Project Fantastix"
			android:layout_above="@id/chick_chat_icon"
			android:layout_centerHorizontal="true"/>
		<TextView
			android:textAppearance="?android:textAppearanceMedium"
			android:textSize="14.0sp"
			android:id="@id/mail_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16.0dip"
			android:text="chrisaugu61@gmail.com"
			android:singleLine="false"
			android:layout_below="@id/version_number"
			android:layout_centerHorizontal="true"
			android:visibility="gone"/>
		<TextView
			android:textAppearance="?android:textAppearanceMedium"
			android:textSize="14.0sp"
			android:id="@+id/copyright_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16.0dip"
			android:text="@string/copyright"
			android:singleLine="false"
			android:layout_below="@id/mail_id"
			android:layout_centerHorizontal="true"/>
		<TextView
			android:textAppearance="?android:textAppearanceSmall"
			android:textSize="10.0sp"
			android:id="@id/thanks_support"
			android:visibility="gone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Thanks for your Support!"
			android:layout_above="@id/madeInPNG"
			android:layout_alignParentBottom="false"
			android:layout_centerHorizontal="true"/>
		<TextView
			android:textAppearance="?android:textAppearanceSmall"
			android:textSize="13.0sp"
			android:id="@id/madeInPNG"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8.0dip"
			android:text="Made in PNG with Love &amp; Passion!"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"/>
	</RelativeLayout>
</LinearLayout>